<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_datos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorCardCliente"
    android:orientation="vertical"
    tools:context=".view.fragment.DatosClienteFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        tools:ignore="UselessParent"
        tools:targetApi="o">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txv_datos_comercio"
                style="@style/titulos_form"
                android:layout_marginTop="16dp"
                android:text="@string/texto_inicio_form" />

            <android.support.v7.widget.CardView
                style="@style/cardview_form"
                android:layout_marginTop="8dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/nombre_comercio"
                        style="@style/titulos_form"
                        android:text="@string/nombre_local" />

                    <EditText
                        android:id="@+id/ed_nombre_comercio"
                        style="@style/edittext_form"
                        android:hint="@string/hint_nombre"
                        android:inputType="textCapWords" />

                    <TextView
                        android:id="@+id/descripcion_comercio"
                        style="@style/titulos_form"
                        android:text="@string/descripcion" />

                    <EditText
                        android:id="@+id/ed_descripcion_comercio"
                        style="@style/edittext_form"
                        android:hint="@string/hint_descripcion"
                        android:inputType="textCapSentences"
                        android:maxLines="7"
                        tools:text="@tools:sample/lorem/random" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/categoria_comercio"
                            style="@style/titulos_form"
                            android:text="@string/Categoria" />

                        <Spinner
                            android:id="@+id/spinn_categorias_comercio"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/categoria_comercio"
                            android:background="@drawable/edit_text_borde" />

                        <TextView
                            android:id="@+id/foto_contacto_comercio"
                            style="@style/titulos_form"
                            android:layout_alignBaseline="@id/categoria_comercio"
                            android:layout_alignStart="@id/btn_cargarFoto_comercio"
                            android:layout_marginBottom="0dp"
                            android:text="@string/foto" />

                        <Button
                            android:id="@+id/btn_cargarFoto_comercio"
                            style="@style/boton_standard"
                            android:layout_height="24dp"
                            android:layout_alignWithParentIfMissing="true"
                            android:layout_below="@+id/foto_contacto_comercio"
                            android:layout_marginStart="11dp"
                            android:layout_marginTop="1dp"
                            android:layout_marginEnd="5dp"
                            android:layout_toStartOf="@id/imagen_contacto_comercio"
                            android:layout_toEndOf="@id/spinn_categorias_comercio"
                            android:text="@string/cargar_foto" />

                        <ImageView
                            android:id="@+id/imagen_contacto_comercio"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_alignParentEnd="true"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="4dp"
                            android:background="@drawable/edit_text_borde"
                            android:contentDescription="@string/foto"
                            android:scaleType="centerCrop" />

                    </RelativeLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                style="@style/cardview_form"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:orientation="horizontal"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:contentDescription="@string/foto"
                            android:maxWidth="50dp"
                            android:maxHeight="50dp"
                            android:src="@drawable/isotipo_marker_mapasdelnorte" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="8dp"
                            android:fontFamily="@font/montserrat"
                            android:gravity="bottom"
                            android:text="@string/datos_de_zona"
                            android:textAllCaps="true"
                            android:textSize="12sp" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/direccion_comercio"
                        style="@style/titulos_form"
                        android:text="@string/Direccion" />

                    <EditText
                        android:id="@+id/ed_direccion_comercio"
                        style="@style/edittext_form"
                        android:hint="@string/hint_direccion"
                        android:inputType="textCapWords" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:baselineAligned="false"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:layout_weight="5"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/localidad_comercio"
                                style="@style/titulos_form"
                                android:text="@string/localidad" />

                            <EditText
                                android:id="@+id/ed_localidad_comercio"
                                style="@style/edittext_form"
                                android:hint="@string/hint_localidad"
                                android:inputType="textCapWords" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/codigoPostal_comercio"
                                style="@style/titulos_form"
                                android:text="@string/cod_postal" />

                            <EditText
                                android:id="@+id/ed_codigoPostal_comercio"
                                style="@style/edittext_form"
                                android:hint="@string/hint_cp"
                                android:inputType="number" />

                        </LinearLayout>
                    </LinearLayout>

                    <TextView
                        android:id="@+id/provincia_comercio"
                        style="@style/titulos_form"
                        android:text="@string/provincia" />

                    <EditText
                        android:id="@+id/ed_provincia_comercio"
                        style="@style/edittext_form"
                        android:hint="@string/hint_provincia"
                        android:inputType="textCapWords" />

                    <TextView
                        android:id="@+id/pais_comercio"
                        style="@style/titulos_form"
                        android:text="@string/pais" />

                    <EditText
                        android:id="@+id/ed_pais_comercio"
                        style="@style/edittext_form"
                        android:hint="@string/hint_pais"
                        android:inputType="textCapCharacters" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_datosDeContacto_Comercio"
                style="@style/cardview_form"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:orientation="horizontal"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:contentDescription="@string/foto"
                            android:maxWidth="50dp"
                            android:maxHeight="50dp"
                            android:src="@drawable/isotipo_marker_mapasdelnorte" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="8dp"
                            android:fontFamily="@font/montserrat"
                            android:gravity="bottom"
                            android:text="@string/datos_de_contacto"
                            android:textAllCaps="true"
                            android:textSize="12sp" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/telefono_comercio"
                        style="@style/titulos_form"
                        android:text="@string/telefono" />

                    <EditText
                        android:id="@+id/ed_telefono_comercio"
                        style="@style/edittext_form"
                        android:hint="@string/hint_tel"
                        android:inputType="phone" />

                    <TextView
                        android:id="@+id/mail_comercio"
                        style="@style/titulos_form"
                        android:text="@string/mail" />

                    <EditText
                        android:id="@+id/ed_mail_comercio"
                        style="@style/edittext_form"
                        android:hint="@string/hint_mail"
                        android:inputType="textEmailAddress" />

                    <TextView
                        android:id="@+id/redes_comercio"
                        style="@style/titulos_form"
                        android:text="@string/redes" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:orientation="horizontal">

                        <CheckedTextView
                            android:id="@+id/cheq_facebook"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:checked="false"
                            android:text="Facebook" />

                        <CheckedTextView
                            android:id="@+id/cheq_instagram"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:checked="false"
                            android:text="Instagram" />

                        <CheckedTextView
                            android:id="@+id/cheq_twitter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:checked="false"
                            android:text="Twitter" />

                        <CheckedTextView
                            android:id="@+id/cheq_whatsapp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:checked="false"
                            android:text="WhatsApp" />

                    </LinearLayout>

                    <EditText
                        android:id="@+id/ed_facebook_comercio"
                        style="@style/edittext_form"
                        android:hint="@string/hint_facebook"
                        android:inputType="textEmailAddress"
                        android:visibility="gone" />

                    <EditText
                        android:id="@+id/ed_instagram_comercio"
                        style="@style/edittext_form"
                        android:hint="@string/hint_instagram"
                        android:inputType="textEmailAddress"
                        android:visibility="gone" />

                    <EditText
                        android:id="@+id/ed_twitter_comercio"
                        style="@style/edittext_form"
                        android:hint="@string/hint_twitter"
                        android:inputType="textEmailAddress"
                        android:visibility="gone" />

                    <EditText
                        android:id="@+id/ed_whatsapp_comercio"
                        style="@style/edittext_form"
                        android:hint="@string/hint_whatsapp"
                        android:inputType="textEmailAddress"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/web_comercio"
                        style="@style/titulos_form"
                        android:text="@string/web" />

                    <EditText
                        android:id="@+id/ed_web_comercio"
                        style="@style/edittext_form"
                        android:hint="@string/hint_web"
                        android:inputType="textWebEditText" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/btn_cargar_datos_comercio"
                style="@style/boton_standard"
                android:layout_height="35dp"
                android:layout_marginBottom="40dp"
                android:maxHeight="50dp"
                android:text="@string/cargar_datos"
                android:textAlignment="center" />
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:backgroundTint="@color/colorAccent"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>